feat(be): image move to common feature
